Fixed the 2 new pictures, made the perspective 3d and fixed the z-indexes of imgs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@ body{
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
+    perspective: 10px;
 }
 
 p{
@@ -24,11 +25,22 @@ header{
     justify-content: center;
     align-items: center;
     height: 100%;
+    transform-style: preserve-3d;
+    z-index: -1;
 }
 
-.sun-foreground,.clouds-foreground{
+
+.clouds-foreground,.sea-backgroud{
     position: absolute;
     height: 100%;
     width: 100%;
-    object-fit: contain;
+    object-fit: cover;
+    z-index: -2;
+}
+
+.sun-foreground{
+    position: absolute;
+    z-index: -1;
+    height: 100%;
+    width: 50%;
 }
